--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #map{
             width: 100vw;
-            height:100vh;
+            height:50vw;
 
         }
     </style>
